作品周りとヘッダー

--- a/app/views/homes/top.html.erb
+++ b/app/views/homes/top.html.erb
@@ -1,2 +1,16 @@
-<h1>Homes#top</h1>
-<p>Find me in app/views/homes/top.html.erb</p>
+<!DOCTYPE html>
+<html>
+<head>
+	<title>COMICwithUS</title>
+</head>
+<body>
+         <li>
+         <%= link_to 'マンガ一覧', comics_path %>
+         </li>
+
+         <li>
+         <%= link_to 'マンガ追加', new_comic_path %>
+         </li>
+
+</body>
+</html>
