--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,20 +12,30 @@
   <body>
     <header>
       <nav>
-        <ul>
           <% if user_signed_in? %>
-            <li>ユーザー</li>
-            <li><%= link_to "ログアウト", destroy_user_session_path, method: :delete %></li>
+            <ul>
+              <li>
+                ようこそ
+                <%= link_to user_path(current_user.id) do %>
+                  <%= current_user.name %>
+                <% end %>
+                さん
+              </li>
+              <li><%= link_to "ログアウト", destroy_user_session_path, method: :delete %></li>
+            </ul>
           <% elsif admin_signed_in? %>
-            <li>管理者</li>
-            <li><%= link_to "ログアウト", destroy_admin_session_path, method: :delete %></li>
+            <ul>
+              <li>管理者</li>
+              <li><%= link_to "ログアウト", destroy_admin_session_path, method: :delete %></li>
+            </ul>
           <% else %>
-            <li>ゲストユーザー</li>
-            <li><%= link_to "新規登録", new_user_registration_path %></li>
-            <li><%= link_to "ログイン", new_user_session_path %></li>
-            <li><%= link_to "管理者ログイン（仮）", new_admin_session_path %></li>
+            <ul>
+              <li>ゲストユーザー</li>
+              <li><%= link_to "新規登録", new_user_registration_path %></li>
+              <li><%= link_to "ログイン", new_user_session_path %></li>
+              <li><%= link_to "管理者ログイン（仮）", new_admin_session_path %></li>
+            </ul>
           <% end %>
-        </ul>
       </nav>
     </header>
     <%= yield %>
