--- a/app/views/admin_comics/show.html.erb
+++ b/app/views/admin_comics/show.html.erb
@@ -1,16 +1,16 @@
 <center>
-<h2>マンガ詳細--管理者</h2>
+<h2>マンガ詳細--管理人</h2>
 </center>
 <div class="container">
 <div class="row">
-<table class="table">
+<table class="table table-striped">
 	<tbody>
 		<tr>
 			<th>作品名</th>
 			<td><%= @comic.title %></td>
 		</tr>
 		<tr>
-			<th>作品名（カナ）</th>
+			<th>作品名</br>(カナ)</th>
 			<td><%= @comic.title_kana %></td>
 		</tr>
 		<tr>
@@ -29,17 +29,77 @@
 			<th>既刊</th>
 			<td><%= @comic.back_number %></td>
 		</tr>
+		<tr>
+			<th>レビュー</br>平均</th>
+			<td class="average-review-rating" data-score=<%= @average_review %>></td>
+		</tr>
 	</tbody>
 </table>
 </div>
+<div class="row">
+	<table class="table">
+  	<thead>
+  	  <tr>
+  	  	<th></th>
+  	  	<th></th>
+  	  	<th></th>
+  	  	<th></th>
+  	  </tr>
+  	</thead>
+	<% @reviews.each do |r| %>
+	<tbody>
+
+      <td><div class="review-rating" data-score="<%= r.rank%>"></div></td>
+	  <td><%= r.title %></td>
+	  <td><%= r.body %></td>
+	  <td>
+	  	<%= link_to admin_user_path(r.user) do %>
+	      <%= r.user.name %>
+	    <% end %>
+	  </td>
+
+	  <td>
+	  	<% if r.user == current_user || admin_signed_in? %>
+	  	  <%= link_to "削除", admin_review_path(r.id), method: :delete, class: "btn btn-danger " %>
+	  	<% end %>
+	  </td>
+
+	</tbody>
+	<% end %>
+	</table>
+
+</div>
 </div>
 
+<center>
 <% if admin_signed_in? %>
-  <li>
-    <%= link_to 'マンガ編集--管理者', edit_admin_comic_path(@comic.id) %>
-  </li>
+  <div class="btn-group">
+    <%= link_to 'マンガ編集', edit_admin_comic_path(@comic.id), class: "btn btn-success " %>
 
-  <li>
-    <%= link_to 'マンガ削除--管理者', admin_comic_path(@comic.id), method: :delete %>
-  </li>
+    <%= link_to 'マンガ削除', admin_comic_path(@comic.id), method: :delete, class: "btn btn-danger " %>
+  </div>
 <% end %>
+</center>
+
+<script>
+  $('.review-rating').raty({
+    readOnly: true,
+    starOn: "<%= asset_path('star-on.png') %>",
+    starOff: "<%= asset_path('star-off.png') %>",
+    score: function() {
+      return $(this).attr('data-score');
+    },
+  });
+</script>
+
+<script>
+  $('.average-review-rating').raty({
+    readOnly: true,
+    starOn: "<%= asset_path('star-on.png') %>",
+    starOff: "<%= asset_path('star-off.png') %>",
+    starHalf: "<%= asset_path('star-half.png') %>",
+    score: function() {
+      return $(this).attr('data-score')
+    }
+  });
+</script>
