--- a/app/views/admin_homes/top.html.erb
+++ b/app/views/admin_homes/top.html.erb
@@ -1,13 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>COMICwithUS--管理者</title>
+	<title>COMICwithUS--管理人</title>
 </head>
 <body>
 
-<li>
-  <%= link_to 'マンガ一覧--管理者', admin_comics_path %>
-</li>
+
 
 </body>
 </html>
