--- a/app/views/comics/edit.html.erb
+++ b/app/views/comics/edit.html.erb
@@ -20,6 +20,6 @@
      <h4>既刊</h4>
      <%= f.number_field :back_number %><br>
 
-     <%= f.submit  '更新', class:"btn btn-primary btn-block" %>
+     <%= f.submit  '更新', class:"btn btn-primary" %>
   <% end %>
 </center>
