--- a/app/assets/stylesheets/application.scss.erb
+++ b/app/assets/stylesheets/application.scss.erb
@@ -13,3 +13,45 @@
  *= require_tree .
  *= require_self
  */
+@import "bootstrap-sprockets";
+@import "bootstrap";
+
+.navbar {
+    padding-top: 15px;
+    padding-bottom: 15px;
+    border: 0;
+    border-radius: 0;
+    margin-bottom: 0;
+    font-size: 12px;
+    letter-spacing: 5px;
+}
+
+.navbar-nav li a:hover {
+    color: #1abc9c !important;
+}
+
+.background {
+	background-image: url("<%= asset_path('comic4.jpg') %>");
+	width: 100%;
+	height: 400px;
+	background-size: cover;
+	background-position: center;
+}
+
+.fukidasi {
+	text-align: center;
+	line-height: 400px;
+}
+
+footer {
+  width: 100%;
+  height: 70px;
+  text-align: center;
+  line-height: 70px;
+  margin-top: 50px;
+  background-color: #000000;
+}
+
+.footer-text {
+  color: #808080;
+}
