--- a/app/views/admin_users/show.html.erb
+++ b/app/views/admin_users/show.html.erb
@@ -1,2 +1,48 @@
-<h1>AdminUsers#show</h1>
-<p>Find me in app/views/admin_users/show.html.erb</p>
+<div class="container">
+  <div class="row">
+  <div class="col-lg-12">
+	<h2><%= @user.name %>さんのレビュー一覧(管理人)</h2>
+  <table class="table">
+  	<thead>
+  	  <tr>
+  	  	<th></th>
+  	  	<th></th>
+  	  	<th>レビューコメント</th>
+  	  	<th>作品名</th>
+  	  	<th></th>
+  	  </tr>
+  	</thead>
+	<% @reviews.each do |r| %>
+	<tbody>
+	  <td><div class="review-rating" data-score="<%= r.rank%>"></div></td>
+	  <td><%= r.title %></td>
+	  <td><%= r.body %></td>
+	  <td>
+	    <%= link_to admin_comic_path(r.comic) do %>
+	      <%= r.comic.title %>
+	    <% end %>
+	  </td>
+	  
+	  <% if r.user == current_user || admin_signed_in? %>
+	  <td>
+	  	<%= link_to "削除", admin_review_path(r.id), method: :delete, class: "btn btn-danger pull-right" %>
+	  </td>
+	  <% end %>
+
+	<% end %>
+    </tbody>
+  </table>
+  </div>
+  </div>
+</div>
+
+<script>
+  $('.review-rating').raty({
+    readOnly: true,
+    starOn: "<%= asset_path('star-on.png') %>",
+    starOff: "<%= asset_path('star-off.png') %>",
+    score: function() {
+      return $(this).attr('data-score');
+    },
+  });
+</script>
