--- a/app/views/homes/top.html.erb
+++ b/app/views/homes/top.html.erb
@@ -4,6 +4,64 @@
 	<title>COMICwithUS</title>
 </head>
 <body>
+	<center>
+	  <div class="background">
+	  	<div class="fukidasi">
+		  <%= image_tag 'comic7.png' %>
+		  <%= image_tag 'comic8.png' %>
+		  <%= image_tag 'comic9.png' %>
+	    </div>
+	  </div>
+	</center>
 
+	<table class="table table-striped">
+	  <thead>
+	  	<th>総合ランキング</th>
+	  </thead>
+	<% @comics.each.with_index(1) do |comic, i| %>
+	  <tbody>
+	  	<tr>
+	  		<td><%= i %>位</td>
+  			<td><%= comic.title %></td>
+  			<td class="average-review-rating" data-score="<%= comic.reviews.average(:rank) %>"></td>
+  			<td><%= comic.attributes['avg_rank'].round(2) %></td>
+  		</tr>
+	<% end %>
+		<tr>
+			<td><%= link_to 'もっと見る>>', comics_total_ranking_path %></td>
+		</tr>
+	  </tbody>
+	</table>
+	<table class="table table-striped">
+	  <thead>
+	    <th>レビュワーランキング</th>
+	  </thead>
+	<% @all_ranks.each.with_index(1) do |user, i| %>
+	  <tbody>
+	    <tr>
+	   		<td><%= i %>位</td>
+  			<td>
+  		  		<%= link_to user_path(user) do %>
+  		    		<%= user.name %>
+  		  		<% end %>
+  			</td>
+  	  	</tr>
+	<% end %>
+		<tr>
+			<td><%= link_to 'もっと見る>>', users_reviewer_ranking_path %></td>
+		</tr>
+	  </tbody>
+	</table>
 </body>
 </html>
+<script>
+  $('.average-review-rating').raty({
+    readOnly: true,
+    starOn: "<%= asset_path('star-on.png') %>",
+    starOff: "<%= asset_path('star-off.png') %>",
+    starHalf: "<%= asset_path('star-half.png') %>",
+    score: function() {
+      return $(this).attr('data-score')
+    }
+  });
+</script>
