--- a/app/views/admin_comics/edit.html.erb
+++ b/app/views/admin_comics/edit.html.erb
@@ -1,26 +1,26 @@
-<center>
-<h2>マンガ編集--管理人</h2>
-  <%= form_for(@comic) do |f| %>
+<div class="center">
+  <h2>マンガ編集--管理人</h2>
+    <%= form_for(@comic) do |f| %>
 
-     <h4>作品名</h4>
-     <%= f.text_field :title %>
+      <h4>作品名</h4>
+      <%= f.text_field :title %>
 
-     <h4>作品名（カナ）</h4>
-     <%= f.text_field :title_kana %>
+      <h4>作品名（カナ）</h4>
+      <%= f.text_field :title_kana %>
 
-     <h4>作者</h4>
-     <%= f.text_field :author %>
+      <h4>作者</h4>
+      <%= f.text_field :author %>
 
-     <h4>出版社</h4>
-     <%= f.text_field :publisher %>
+      <h4>出版社</h4>
+      <%= f.text_field :publisher %>
 
-     <h4>あらすじ</h4>
-     <%= f.text_area :story %>
+      <h4>あらすじ</h4>
+      <%= f.text_area :story %>
 
-     <h4>既刊</h4>
-     <%= f.number_field :back_number %><br>
+      <h4>既刊</h4>
+      <%= f.number_field :back_number %><br>
 
-     <%= f.submit  '更新', class:"btn btn-primary" %>
-  <% end %>
-</center>
+      <%= f.submit  '更新', class:"btn btn-primary" %>
+    <% end %>
+</div>
 
