--- a/app/views/comics/total_ranking.html.erb
+++ b/app/views/comics/total_ranking.html.erb
@@ -1,22 +1,29 @@
-<table class="table table-striped">
-	  <thead>
-	  	<th>総合ランキング</th>
-	  </thead>
-	<% @comics.each.with_index(1) do |comic, i| %>
-	  <tbody>
-	  	<tr>
-	  		<td><%= i %>位</td>
-  			<td>
-  			  <%= link_to comic_path(comic) do %>
-  				<%= comic.title %>
-  			  <% end %>
-  			</td>
-  			<td class="average-review-rating" data-score="<%= comic.reviews.average(:rank) %>"></td>
-  			<td><%= comic.attributes['avg_rank'].round(2) %></td>
-  		</tr>
-	<% end %>
-	  </tbody>
-</table>
+<div class="container">
+  <div class="row">
+    <table class="table table-hover table-inverse">
+	    <thead>
+        <tr>
+	  	    <th>総合ランキング</th>
+        </tr>
+	    </thead>
+	    <% @comics.each.with_index(1) do |comic, i| %>
+	    <tbody>
+	  	  <tr>
+	  		  <td><%= i %>位</td>
+  			  <td>
+  			    <%= link_to comic_path(comic) do %>
+  				    <%= comic.title %>
+  			    <% end %>
+  			  </td>
+  			  <td class="average-review-rating" data-score="<%= comic.reviews.average(:rank) %>"></td>
+  			  <td><%= comic.attributes['avg_rank'].round(2) %></td>
+  		  </tr>
+      </tbody>
+	    <% end %>
+    </table>
+  </div>
+</div>
+
 <script>
   $('.average-review-rating').raty({
     readOnly: true,
