--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,4 +1,4 @@
-<center>
+<div class="center">
 <h2>会員登録</h2>
 
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
@@ -37,4 +37,4 @@
 からログインしてください。
 
 <%#= render "devise/shared/links" %>
-</center>
+</div>
