--- a/app/views/users/reviewer_ranking.html.erb
+++ b/app/views/users/reviewer_ranking.html.erb
@@ -1,17 +1,23 @@
-<table class="table table-striped">
-	<thead>
-	  <th>レビュワーランキング</th>
-	</thead>
-	<% @all_ranks.each.with_index(1) do |user, i| %>
-	<tbody>
-	  <tr>
-	    <td><%= i %>位</td>
-  		<td>
-  		  <%= link_to user_path(user) do %>
-  		    <%= user.name %>
-  		  <% end %>
-  		</td>
-  	  </tr>
-	<% end %>
-	</tbody>
-</table>
+<div class="container">
+  <div class="row">
+    <table class="table table-hover table-inverse">
+	  <thead>
+	    <tr>
+	      <th>レビュワーランキング</th>
+	    </tr>
+	  </thead>
+	  <% @all_ranks.each.with_index(1) do |user, i| %>
+	  <tbody>
+	    <tr>
+	      <td><%= i %>位</td>
+  		  <td>
+  		    <%= link_to user_path(user) do %>
+  		      <%= user.name %>
+  		    <% end %>
+  		  </td>
+  	    </tr>
+	  </tbody>
+	  <% end %>
+    </table>
+  </div>
+</div>
