--- a/app/views/comics/show.html.erb
+++ b/app/views/comics/show.html.erb
@@ -36,12 +36,14 @@
 	  </tbody>
     </table>
   </div>
+<!-- タグ表示ここから -->
   <div class="row">
   	<% @comic_tags.each do |tag| %>
   	  <%= link_to tag.tag_name, tag_comics_path(tag_id: tag.id) %>
   	  <%= tag.comics.count %>
   	<% end %>
   </div>
+<!-- ここまで -->
   <div class="row">
     <table class="table">
   	  <thead>
